--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Patrick+Hand' />
 		<link rel='stylesheet' type='text/css' href='starry.min.css' />
 
-		<link rel='shortcut icon' type='image/x-icon' href='icons/star_hover.png' />
+		<link rel='shortcut icon' type='image/x-icon' href='icons/1/star_hover.png' />
 
 		<script type='text/javascript' language='javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 		<script type='text/javascript' language='javascript' src='http://onehackoranother.com/projects/jquery/tipsy/javascripts/jquery.tipsy.js'></script>
