--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 						<tr>
 							<td>iconPath</td>
 							<td>string</td>
-							<td>icons/</td>
+							<td><code>icons/</code></td>
 							<td>Path to rating icons.</td>
 						</tr>
 						<tr>
