--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Patrick+Hand' />
 		<link rel='stylesheet' type='text/css' href='starry.min.css' />
 
-		<link rel='shortcut icon' type='image/x-icon' href='icons/1/star_hover.png' />
+		<link rel='shortcut icon' type='image/x-icon' href='icons/star_hover.png' />
 
 		<script type='text/javascript' language='javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 		<script type='text/javascript' language='javascript' src='http://onehackoranother.com/projects/jquery/tipsy/javascripts/jquery.tipsy.js'></script>
@@ -168,8 +168,6 @@
 
 				$('#switchIcon').off();
 				$('#switchIcon').click(function () {
-					alert('Coming soon...');
-					/*
 					var random;
 					random = 1 + parseInt(Math.random() * ((6 + 1) - 1));
 					random = 'icons/' + random + '/';
@@ -177,7 +175,6 @@
 					starry_playground.update({
 						iconPath: random
 					});
-					*/
 				});
 
 				$('#enableTooltips').off();
@@ -399,7 +396,7 @@
 						<tr>
 							<td>iconPath</td>
 							<td>string</td>
-							<td><code>icons/</code></td>
+							<td>icons/</td>
 							<td>Path to rating icons.</td>
 						</tr>
 						<tr>
