--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>Starry</title>
 		
 		<meta name='author' content='Andre Sieverding' />
-		<meta name='keywords' content='javascript, star, rating, star rating, starrating, js, github, andre sieverding, teddy, teddy95' />
-		<meta name='description' content='JavaScript star rating system.' />
+		<meta name='keywords' content='starry, starryjs, javascript, star, rating, star rating, starrating, js, github, andre sieverding, teddy, teddy95, github, five, five star rating, fuenf, fünf, sterne, sternebewertung, html, css, ajax, jquery' />
+		<meta name='description' content='JavaScript star rating system based on Ajax.' />
 
 		<link rel='stylesheet' type='text/css' href='http://onehackoranother.com/projects/jquery/tipsy/stylesheets/tipsy.css' />
 		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css' />
@@ -15,6 +15,7 @@
 		<link rel='stylesheet' type='text/css' href='starry.min.css' />
 
 		<link rel='shortcut icon' type='image/x-icon' href='icons/star_hover.png' />
+		<link rel='canonical' href='http://teddy95.github.io/Starry/index.html' />
 
 		<script type='text/javascript' language='javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 		<script type='text/javascript' language='javascript' src='http://onehackoranother.com/projects/jquery/tipsy/javascripts/jquery.tipsy.js'></script>
