--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 					<input type="hidden" name="cmd" value="_donations">
 					<input type="hidden" name="business" value="mail@andre-sieverding.de">
 					<input type="hidden" name="lc" value="DE">
-					<input type="hidden" name="item_name" value="Panther CMS">
+					<input type="hidden" name="item_name" value="Starry">
 					<input type="hidden" name="no_note" value="0">
 					<input type="hidden" name="currency_code" value="EUR">
 					<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
