--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		
 		<meta name='author' content='Andre Sieverding' />
 		<meta name='keywords' content='starry, starryjs, javascript, star, rating, star rating, starrating, js, github, andre sieverding, teddy, teddy95, github, five, five star rating, fuenf, fünf, sterne, sternebewertung, html, css, ajax, jquery' />
-		<meta name='description' content='JavaScript star rating system based on Ajax.' />
+		<meta name='description' content='Starry is a JavaScript star rating system based on Ajax.' />
 
 		<link rel='stylesheet' type='text/css' href='http://onehackoranother.com/projects/jquery/tipsy/stylesheets/tipsy.css' />
 		<link rel='stylesheet' type='text/css' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css' />
